src/test/ui/issue-16401.stderr
error[E0308]: mismatched types
  --> $DIR/issue-16401.rs:18:9
   |
LL |         Slice { data: data, len: len } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found struct `Slice`
   |
   = note: expected type `()`
              found type `Slice<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
